--- a/rbac/templates/rbac/base.html
+++ b/rbac/templates/rbac/base.html
@@ -6,24 +6,27 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}模板{% endblock %}</title>
-{#    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">#}
+
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     {% block css %} {% endblock css %}
 
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-4">
-            {% block menu %}
-            {% menu_html request %}   {# 用inclusion_tag生成的menu_html #}
-            {% endblock menu %}
-        </div>
-        <div class="col-8">
-            {% block content %}
-                content
-            {% endblock content %}
+    <div class="container">
+        <div class="row">
+            <div class="menu">
+                {% block menu %}
+                    {% menu_html request %}   {# 用inclusion_tag生成的menu_html #}
+                {% endblock menu %}
+            </div>
+            <div class="content">
+                {% block content %}
+
+                {% endblock content %}
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
