--- a/rbac/templates/rbac/m1.html
+++ b/rbac/templates/rbac/m1.html
@@ -1,4 +1,10 @@
 {% extends 'rbac/base.html' %}
+
 {% block content %}
-    <p>m1</p>
+
+    <p>m1的action有：</p>
+    {% for act in action %}
+        <p>{{ act }}</p>
+    {% endfor %}
+
 {% endblock %}
